assets/css/eat-in.css
* {
    box-sizing: border-box;
    font-family: 'Ubuntu', sans-serif;   
}

:root {
    --primary-color: rgb(251,240,207);
    --secondary-color: rgb(33, 85, 33);
    --tertiary-color: #fbff00;
    --quaternary-color: rgb(155, 9, 9);
}

header {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
}

header h1 {
    font-size: xx-large;
    padding: 0px 0px 0px 20px;
    position: sticky;
}
    
.content {
    background-color: rgb(251,240,207);
}

.navbar-menu, footer.footer, footer strong {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

footer.footer {
    padding: 15px;
    margin-bottom: 20px;
    position: fixed;
    bottom:0;
    left:0;
    right:0;
}


div.navbar-menu, .div.title {
    padding: 10px;
    
}

.navbar-item.is-expanded {
    color: var(--primary-color);
    padding: 0px 40px;
}

.navbar-menu {
    background-image: linear-gradient(45deg, var(--quaternary-color) 0%, orange 52%, var(--quaternary-color) 90%);
    color: var(--primary-color);
}

footer.footer {
    background-image: linear-gradient(45deg, var(--quaternary-color) 0%, orange 52%, var(--quaternary-color) 90%);
    color: var(--secondary-color);
}

.background-image {
    background-image: url(../images/eat_in.jpg);
    background-image: cover;
    
}

.info{
    padding-top: 20px;
    background-color: var(--primary-color);
    margin-top: 50px;
    margin-left: 16px;
    margin-right: 16px;
    margin-bottom: 50px;
    border-radius: 15px;
    box-shadow: black;
}

form {
    border-radius: 15px;
   
    margin: 10px;
    background-color: var(--primary-color);
    font-size: 15px;
    font-family: 'Ubuntu', sans-serif; 
}

input {
    font-size: 17px;
    margin-top: 50px;;
    padding: 15px;
    font-family: 'Ubuntu', sans-serif;
    border-radius: 15px;
}

.column {
    margin-top:10px;
    margin-bottom: 10px;
    
}

div.subtitle {
    padding-bottom: 40px;
}

#search-btn, #searchBtn {
    border-radius: 15px;
    padding: 15px 40px;
    margin: px;
    background-color: #B80000;
    font-size: 20px;
    font-weight: bold;
    font-family: 'Ubuntu', sans-serif;    
}

#search-btn, #searchBtn:hover {
    filter: blur(1px);  
    border-radius: 15px;
}

.tiles {
    margin: 5px 50px;
    margin-bottom: 50px;
    /* position: static; */

} 

#recipe-card {
    margin: 5px 500px;
    margin-bottom: 50px;
    background-color: rgba(252, 123, 2, 0.63);
    color: white;
    position: static;
} 

/* .image {
    position: static;
} */

